export const snapshot = {};

snapshot[`after onRunStart 1`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 1`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 1`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (3) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (3) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onRunEnd 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m

[1mSummary[0m
  [32m✓[39m 3 scenarios passed

3 scenarios total [36m[45.000ms][39m
"
`;

snapshot[`after onRunStart 2`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 2`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 2`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onStepEnd - Step that fails (2-2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 1`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
"
`;

snapshot[`after onStepStart - Step that passes (3) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
"
`;

snapshot[`after onStepEnd - Step that passes (3) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
"
`;

snapshot[`after onRunEnd 2`] = `
"[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [32m✓[39m Scenario with failing step [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: Assertion failed[39m
[90mT┆[39m [32m✓[39m Simple passing scenario [90m>[39m Step that passes [90m(test.scenario.ts:15)[39m [36m[10.000ms][39m

[1mFailed Tests[0m
[90mT┆[39m [31m✗[39m Scenario with failing step [90m>[39m Step that fails [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m
[90m ┆[39m[31m   Error: Assertion failed[39m
[90m ┆[39m
[90m ┆[39m   [1mStack trace[0m
[90m ┆[39m
[90m ┆[39m     [90mat <file>:130:12[39m

[1mSummary[0m
  [32m✓[39m 2 scenarios passed
  [31m✗[39m 1 scenarios failed

3 scenarios total [36m[35.000ms][39m
"
`;

snapshot[`after onRunStart 3`] = `""`;

snapshot[`after onRunEnd 3`] = `
"
[1mSummary[0m
  [32m✓[39m 0 scenarios passed

0 scenarios total [36m[0.000ms][39m
"
`;

snapshot[`after onRunStart 4`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 3`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 3`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (3) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (3) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 3`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onRunEnd 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]

Summary
  ✓ 3 scenarios passed

3 scenarios total [45.000ms]
"
`;

snapshot[`after onRunStart 5`] = `""`;

snapshot[`after onScenarioStart - Simple passing scenario (1) 4`] = `""`;

snapshot[`after onStepStart - Step that passes (1) 4`] = `""`;

snapshot[`after onStepEnd - Step that passes (1) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (1) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioStart - Scenario with failing step (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that passes (2-1) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that passes (2-1) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepStart - Step that fails (2-2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onStepEnd - Step that fails (2-2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
"
`;

snapshot[`after onScenarioEnd - Scenario with failing step (2) 2`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
"
`;

snapshot[`after onScenarioStart - Simple passing scenario (3) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
"
`;

snapshot[`after onStepStart - Step that passes (3) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
"
`;

snapshot[`after onStepEnd - Step that passes (3) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onScenarioEnd - Simple passing scenario (3) 4`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
"
`;

snapshot[`after onRunEnd 5`] = `
"T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✓ Scenario with failing step > Step that passes (test.scenario.ts:15) [10.000ms]
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: Assertion failed
T┆ ✓ Simple passing scenario > Step that passes (test.scenario.ts:15) [10.000ms]

Failed Tests
T┆ ✗ Scenario with failing step > Step that fails (test.scenario.ts:20) [5.000ms]
 ┆
 ┆   Error: Assertion failed
 ┆
 ┆   Stack trace
 ┆
 ┆     at <file>:130:12

Summary
  ✓ 2 scenarios passed
  ✗ 1 scenarios failed

3 scenarios total [35.000ms]
"
`;

snapshot[`after onRunStart 6`] = `""`;

snapshot[`after onRunEnd 6`] = `
"
Summary
  ✓ 0 scenarios passed

0 scenarios total [0.000ms]
"
`;

snapshot[`ListReporter - multiline error messages with colors shows only first line of multiline error in onStepEnd 1`] = `
"[90mT┆[39m [31m✗[39m Simple passing scenario [90m>[39m Step with multiline error [90m(test.scenario.ts:20)[39m [36m[5.000ms][39m
[90m ┆[39m └ [31mError: First line of error[39m
"
`;

snapshot[`ListReporter - multiline error messages with colors shows only first line of multiline skip reason in onStepEnd 1`] = `
"[90mT┆[39m [33m⊘[39m Simple passing scenario [90m>[39m Step skipped with multiline reason [90m(test.scenario.ts:25)[39m [36m[0.000ms][39m
[90m ┆[39m[33m └ Skipped due to:[39m
"
`;

snapshot[`ListReporter - multiline error messages without colors shows only first line of multiline error in onStepEnd 1`] = `
"T┆ ✗ Simple passing scenario > Step with multiline error (test.scenario.ts:20) [5.000ms]
 ┆ └ Error: First line of error
"
`;

snapshot[`ListReporter - multiline error messages without colors shows only first line of multiline skip reason in onStepEnd 1`] = `
"T┆ ⊘ Simple passing scenario > Step skipped with multiline reason (test.scenario.ts:25) [0.000ms]
 ┆ └ Skipped due to:
"
`;
